UtahLiveDataTest/src/objects/BusinessPackage__c.object
<CustomObject>
    <description>[Business]  This object associates the Package with the Program or Opportunity</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populate this field to identify default packages for a given agency</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>Business_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <description>Formula field to find the Application ie; Grantee/ Grantor to which this Business package belongs</description>
        <formula>PackageConfig__r.GNT__CustomAppConfig__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>BusinessPackages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>Business_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Grants</description>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>Business_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantorOrgWideDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Org wide package for grantor which is used upon program creation to auto populate the business package for a given program.</inlineHelpText>
        <label>Grantor Org Wide Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEdit__c</fullName>
        <formula>NOT(OR(ISPICKVAL(FundingOpportunity__r.Status__c,&apos;Created&apos;), 
ISPICKVAL(FundingOpportunity__r.Status__c,&apos;Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Announcement Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(Program__c!=null,NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))),
  AND(FundingOpportunity__c!=null,FundingOpportunity__r.HideEditBtn__c),
  AND(Grant__c!=null, HidePackageDelete__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field decide which package will be available for portal users.</description>
        <label>Hide For External User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePackageDelete__c</fullName>
        <description>This field is created to hide delete on packages when the grant is activated.</description>
        <formula>If(ISPICKVAL(Grant__r.Status__c,&apos;Active&apos;)|| $User.ContactId !=null , true,false)</formula>
        <label>HidePackageDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mandatory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PackageConfig__c</fullName>
        <label>Package Config</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>Business_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PackageName__c</fullName>
        <formula>PackageConfig__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageType__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>App-Review</fullName>
                </value>
                <value>
                    <fullName>Award</fullName>
                </value>
                <value>
                    <fullName>Amendment Request</fullName>
                </value>
                <value>
                    <fullName>Progress Report</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Payment Request</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Risk Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <description>This formula field is used in Grantee Package 2 flex table</description>
        <formula>IF( ISBLANK(FundingOpportunity__c) , 
      IF( ISBLANK(Grant__c) , 
          &quot;&quot;, 
           IF( ISBLANK(Grant__r.FederalProgram__c) , 
				&quot;&quot;, 
                HYPERLINK((&apos;/&apos; + Grant__r.FederalProgram__c), Grant__r.FederalProgram__r.FederalProgramTitle__c ,&apos;_self&apos;) 
			)
		),
      IF( ISBLANK(FundingOpportunity__r.Program__c) , 
           IF( ISBLANK(Grant__c) , 
				&quot;&quot;, 
				IF( ISBLANK(Grant__r.FederalProgram__c) , 
						&quot;&quot;, 
						HYPERLINK((&apos;/&apos; + Grant__r.FederalProgram__c), Grant__r.FederalProgram__r.FederalProgramTitle__c ,&apos;_self&apos;) 
				)
            ) ,
           FundingOpportunity__r.FederalProgram__c
		) 
)</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Business Packages</relationshipLabel>
        <relationshipName>Business_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniquePackageName__c</fullName>
        <description>This field is used to display Unique Package Name</description>
        <label>Unique Package Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <formula>PackageConfig__r.GNT__VersionNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Business Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PackageType__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>PackageConfig__c</columns>
        <columns>PackageName__c</columns>
        <columns>GrantorOrgWideDefault__c</columns>
        <columns>IsMandatory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GrantorOrgWideDefault__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>OWD Filtered</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AnnouncementAndProgramVal</fullName>
        <active>true</active>
        <errorConditionFormula>Program__c  &lt;&gt; null &amp;&amp;  FundingOpportunity__c  &lt;&gt; null</errorConditionFormula>
        <errorMessage>Program and Announcement value can not present at a time.</errorMessage>
    </validationRules>
</CustomObject>